# zpg

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  zpg.cbp
assets/shaders/fragment/: basic.glsl  basicTexture.glsl  lambertLight.glsl  lightCube.glsl  lightning.glsl  lights.glsl  phongLightning.glsl  skybox.glsl  textureLight.glsl
assets/shaders/vertex/: basic.glsl  basicTexture.glsl  lightCube.glsl  lightning.glsl  lights.glsl  skybox.glsl
src/: Application.cpp  Application.h  AssetManager.h  Camera.h  CameraObserver.h  GLFWContext.h  GLWindow.h  Light.h  LightGLSL.h  LightsCollection.h  Material.h  MathHelpers.h  Observer.h  Projection.h  ResizeObserver.h  Shader.cpp  Shader.h  ShaderLoader.h  ShaderLoaderV2.h  Skybox.h  Texture.h  Transformation.h  assertions.h  gl_info.h  gl_utils.h  log.h  main.cpp
src/drawable/: Bush.h  Cube.h  Drawable.h  DynamicModel.h  PlaneWithTexture.h  Rectangle.h  Sphere.h  Suzi.h  Tree.h  Triangle.h
src/scenes/: BasicScene.h  Scene.h  SceneForest.h  SceneFpsDisplay.h  SceneHelloTexture.h  SceneLightningBalls.h  SceneModels.h  SceneSuzi.h  SceneSwitcher.h  SceneTreeLights.h  SceneTriangle.h
src/shaders/: SSBO.h  Shader.h  ShaderBasic.h  ShaderBasicTexture.h  ShaderCommon.h  ShaderLambertLightning.h  ShaderLightCube.h  ShaderLightTexture.h  ShaderLightning.h  ShaderLights.h  ShaderLoader.cpp  ShaderLoader.h  ShaderSkybox.h
